# bnb

./: CMakeLists.txt  LICENSE.rst  NEWS.rst  README.rst  buildbot.py  config.py  resolve.json  waf  wscript
src/bnb/: bit_reader.hpp  stream_reader.hpp  validator.hpp  validator_wrapper.hpp
test/: wscript_build
test/src/: test_bit_reader.cpp  test_stream_reader.cpp  test_validator.cpp  test_validator_wrapper.cpp
